# multidd-hs

./: LICENSE  README.md  multidd-hs.cabal
src/: Main.hs
