name:                multidd-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nomelif/multidd-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Théo Friberg
maintainer:          theo.friberg@gmail.com
copyright:           MIT
category:            personal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable multidd-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, parallel
